Change Old Service to SerVice SS
in Nav Bar

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -116,7 +116,7 @@
                                 <a href="#gallery">Gallery</a>
                             </li>
                             <li>
-                                <a href="#services">Services</a>
+                                <a href="ServiceSS">ServiceSS</a>
                             </li>
                             <li>
                                 <a href="#testimonials">Testimonials</a>
