--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -169,10 +169,10 @@
                     <h2 class="section-title">How We Help You To Sell Your Product</h2>
                     <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
-                    <% services.map((service))=>{  %>
+           <!--   <% services.map((service))=>{  %>
                         <h2><%=services.serviceTitle %></h2>
                         <p><%=services.serviceDescript %></p>
-                    <%})%>
+                    <%})%> -->
                 </div>
 
             </div>
