--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -165,8 +165,7 @@
                 <div class="section-heading">
                     <h3>SUCCESS</h3>
                     <h2 class="section-title">How We Help You To Sell Your Product</h2>
-                    <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                    <p class="section-subtitle"> Bring service here</p>
                 </div>
 
             </div>
