second try to link data

--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -166,6 +166,9 @@
                     <h3>SUCCESS</h3>
                     <h2 class="section-title">How We Help You To Sell Your Product</h2>
                     <p class="section-subtitle"> Bring service here</p>
+                    <% services.map((service)=>{ %>
+                        <h2><%=services.serviceTitle %></h2>
+                       <%})%>
                 </div>
 
             </div>
