--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -164,8 +164,8 @@
             <div class="col-3">
                 <div class="section-heading">
                     <h3>SUCCESS</h3>
-                    <h2 class="section-title">How We Help You To Sell Your Product</h2>
-                    <p class="section-subtitle"> Bring service here</p>\
+                    <h2>How We Help You To Sell Your Product</h2>
+                    <p> Bring service here</p>\
                     <% services.map((service)=>{ %>
                         <h2><%=services.serviceTitle %></h2>
                        <%})%>
