move link sec below

--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -166,10 +166,10 @@
                     <h3>SUCCESS</h3>
                     <h2>How We Help You To Sell Your Product</h2>
                     <p> Bring service here</p>\
-                    <% services.map((service)=>{ %>
-                        <h2><%=services.serviceTitle %></h2>
-                       <%})%>
+                
                 </div>
+
+
 
             </div>
 
@@ -242,6 +242,13 @@
 
     </section>
     <!--End of Introduction-->
+
+</div>
+<% services.map((service)=>{ %>
+    <h2><%=services.serviceTitle %></h2>
+   <%})%>
+<div>
+
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
