try this arrangement
  Should Begin Here
                            <% services.forEach((service) => { %>
                                <%= service.serviceTitle %>
                                <% }) %>
                            End Here

--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -168,7 +168,9 @@
                         <h2 class="section-title">How We Help You To Sell Your Product</h2>
                         <p class="section-subtitle">
                             Should Begin Here
-                            <% services.forEach((service) => { %><%= service.serviceTitle %> <% }) %>
+                            <% services.forEach((service) => { %>
+                                <%= service.serviceTitle %> 
+                                <% }) %>
                             End Here
                             
                         </p>
