try title and desc

--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -170,6 +170,7 @@
                             Should Begin Here
                             <% services.map((service)=>{ %>
                                 <%=service.serviceTitle%> 
+                                <%=service.serviceDescript%> 
                                 <%})%>
                             End Here
                             
