--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -169,8 +169,8 @@
                         <p class="section-subtitle">
                             Should Begin Here
                             <% services.map((service)=>{ %>
-                                <%=service.serviceTitle%> 
-                                <%=service.serviceDescript%> 
+                                <%=service.serviceTitle%> <br> 
+                                <%=service.serviceDescript%> <br>
                                 <%})%>
                             End Here
                             
