--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -158,10 +158,9 @@
     </header>
   <!--Introduction-->
      <section id="about" class="introduction scrollto">
+<!-- begin test area -->
 
         <div class="row clearfix">
-
-            <div class="col-3">
                 <div class="col-3">
                     <div class="section-heading">
                         <h3>SUCCESS</h3>
@@ -172,15 +171,13 @@
                                 <%=service.serviceTitle%> <br> 
                                 <%=service.serviceDescript%> <br>
                                 <%})%>
-                            End Here
-                            
                         </p>
                         
                     </div>
 
                 </div>
 
-
+<!-- finish test area -->
             </div>
 
             <div class="col-2-3">
