--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -166,7 +166,7 @@
                         <h3>SUCCESS</h3>
                         <h2 class="section-title">How We Help You To Sell Your Product</h2>
                         <p class="section-subtitle">
-                            Begin Here
+                            Shoulds Begin Here
                             <% services.map((service)=>{ %>
                                 <%=service.serviceTitle%> <br> 
                                 <%=service.serviceDescript%> <br>
