edit to bold text

--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -168,7 +168,7 @@
                         <p class="section-subtitle">
                             Shoulds Begin Here Na Na
                             <% services.map((service)=>{ %>
-                                <%=service.serviceTitle%> <br> 
+                               <h2> <%=service.serviceTitle%></h2> <br> 
                                 <%=service.serviceDescript%> <br>
                                 <%})%>
                         </p>
