change Heading style

--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -168,8 +168,8 @@
                         <p class="section-subtitle">
                             Shoulds Begin Here Na Na
                             <% services.map((service)=>{ %>
-                               <h2> <%=service.serviceTitle%></h2> <br> 
-                                <%=service.serviceDescript%> <br>
+                               <h2> <%=service.serviceTitle%></h2> 
+                               <p> <%=service.serviceDescript%> </p>
                                 <%})%>
                         </p>
                         
