--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -168,7 +168,7 @@
                         <p class="section-subtitle">
                             Shoulds Begin Here Na Na
                             <% services.map((service)=>{ %>
-                               <h2> <%=service.serviceTitle%></h2> 
+                               <strong> <%=service.serviceTitle%></strong> 
                                <p> <%=service.serviceDescript%> </p>
                                 <%})%>
                         </p>
