--- a/src/views/Serviceka.ejs
+++ b/src/views/Serviceka.ejs
@@ -170,6 +170,7 @@
                             <% services.map((service)=>{ %>
                                <strong> <%=service.serviceTitle%></strong> 
                                <p> <%=service.serviceDescript%> </p>
+                               <p>ราคา : <%=service.servicePrice%> บาท</p>
                                 <%})%>
                         </p>
                         
