--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -9,7 +9,7 @@
     <h1>This is Product and Service of US</h1>
     <% services.map((service)=>{ %>
         <h1>
-          <a href="/services/<%=services.id%>"> <%=service.serviceTitle%> </a>
+          <a href="/products/<%=services.id%>"> <%=service.serviceTitle%> </a>
         </h1> 
         <p> <%=service.serviceDescript%> </p>
         <p>ราคา : <%=service.servicePrice%> บาท</p>
