--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product</title>
+    <title>DetailJa</title>
 </head>
 <body>
-    <h1>This is Product and Service of US</h1>
-    <% services.map((service)=>{ %>
+    <h1>This is detail JA</h1>
+
         <h1>
           <a href="/products/<%=service.id%>"><%=service.serviceTitle %> </a>
         </h1> 
         <p> <%=service.serviceDescript%> </p>
         <p>ราคา : <%=service.servicePrice%> บาท</p>
-         <%})%>
+
 
 </body>
 </html>
