--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -9,7 +9,7 @@
     <h1>This is detail JA</h1>
 
         <h1>
-          <a href="/products/<%=services.id%>"><%=service.serviceTitle %> </a>
+          <a href="/products/<%=service.id%>"><%=service.serviceTitle %> </a>
         </h1> 
         <p> <%=service.serviceDescript%> </p>
         <p>ราคา : <%=service.servicePrice%> บาท</p>
