--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -11,8 +11,8 @@
         <h1>
           <a href="/products/<%=product.id%>"><%=product.serviceTitle %> </a>
         </h1> 
-        <p> <%=product.serviceDescript%> </p>
-        <p>ราคา : <%=product.servicePrice%> บาท</p>
+        <p> <%=service.serviceDescript%> </p>
+        <p>ราคา : <%=service.servicePrice%> บาท</p>
 
 
 </body>
